<resources>
    <string name="app_name">StyleOmega v1.0</string>
    <string name="success_login">Successful login!</string>
    <string name="Register_button">Register</string>
    <string name="Login_button">Login</string>
    <string name="Update_button">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_Update">Update Account</string>
    <string name="action_SeeCart">See My Cart</string>
    <string name="action_LogOut">Log out</string>
    <string name="Update">Update Account</string>
    <string name="Create_new_Acc">Create New Account</string>
    <string name="use_existing">I already have an account</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Password_mismatch">Passwords Mismatch! Check Again</string>
    <string name="successful_update">Successful Update!</string>
    <string name="Unable_Update">Unable to update</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="action_settings">Settings</string>
    <string name="checkout_btn">Checkout</string>
    <string name="title_activity_downtabs">downtabsActivity</string>
    <string name="title_activity_tabdowntest">tabdowntest</string>
    <string name="product_desc">tThis is dummy text created by sachin. lorem ipsum dummy This is dummy text created by sachin. lorem ipsum dummyThis is dummy text created by sachin.
        lorem ipsum dummy</string>
    <string name="add_cart">Cart-ify!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="facebook_app_id">501649390180011 </string>
    <string name="fb_login_protocol_scheme">fb501649390180011</string>
    <string name="see_more_details">See more details</string>
    <string name="share">Share</string>
    <string name="admin_console">Admin Console</string>
    <string name="product_name">product name</string>
    <string name="product_type">product type</string>
    <string name="product_img">image path</string>
    <string name="product_gender">gender</string>
    <string name="product_qty">Quantity</string>
    <string name="product_details">description</string>
    <string name="product_price">price</string>
    <string name="add_pro">add product</string>
    <string name="delete_pro">delete product</string>
    <string name="forgot_pw">I can\'t remember my password</string>
    <string name="isthisyouremail">Is this your email address?</string>
    <string name="weHaveSentAnEmail">We have sent an email to this address, please check your inbox.</string>
    <string name="thisisnotmyMail">This is not my email :(</string>
    <string name="resetBtn"> Okay, I\'ll check my emails </string>
    <string name="weAtStyleOmega">We are styleOmega are very thankful to you for selecting styleOmega. Please register as a customer to enjoy the exlusive benefits of our App.</string>
    <string name="Purchase">Purchase</string>
    <string name="BuyerDetails">Buyer Details</string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Tel">Telephone Number</string>
    <string name="Email">Email</string>
    <string-array name="CashOrCard">
        <item>Cash</item>
        <item>Card</item>
    </string-array>
    <string name="Amount">Amount in Rs.</string>
    <string name="CardDetails">Card number</string>
    <string name="Security_number">Security pin</string>
    <string name="PlzLookAtTheBackOfYourCard">Please look in the back of your card.</string>
    <string name="Expiry_date">Card expiry date</string>
    <string name="Payment_info">Payment_details</string>
    <string name="Delivery_details">DeliveryDetails</string>
    <string name="Adress">Address</string>
    <string name="itsAGift">Its a gift, I need it wrapped.</string>
    <string name="Additional_notes">Additional notes, If any</string>
    <string name="agree">Hereby I\'m agreeing to pay the above mentioned amount for my purchases.</string>
    <string-array name="Card_type">
        <item>Visa</item>
        <item>Master Card</item>
    </string-array>
    <string name="congratulations">Congratulations!</string>
    <string name="item_size">Item size</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="successful_reg"> "Successfully registered, you may now Login"</string>
    <string name="Password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="addToCart_success">Added succcessfully</string>
    <string name="addToCart_fail">Couldnt add right now! try again shortly :)</string>
    <string name="delete">Delete</string>
    <string name="successful_delete">Successfully deleted</string>
    <string name="mesg_wasnt_sent">Sorry, the message was not sent. try again shortly.</string>
    <string name="mesg_updated">Message is updated</string>
    <string name="delete_msg_q">Delete the message?</string>
    <string name="delete_msg">Deleted!</string>
    <string name="delete_msg_fail">Unable to delete</string>
    <string name="yes">Yes</string>
    <string name="title_activity_contact_store">ContactStore</string>
    <string name="contact">Contact</string>
    <string name="contactStore">Contact Store</string>
    <string name="youCanContactUsOn">You can contact us on \n +94773481931 \n or visit our new store at \n Liberty Plaza, Colpity.</string>
    <string name="replyToMessage">Reply to messages</string>
    <string name="edit">Edit</string>
    <string name="reply">Reply</string>
    <string name="edit_msg">Edit Message</string>
</resources>
